Added documentation for all the endpoints
